--- a/showcase/powered-by-fiware/index.html
+++ b/showcase/powered-by-fiware/index.html
@@ -903,7 +903,8 @@ document.addEventListener("DOMContentLoaded", () => {
 <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
 
 <!-- GeoIP -->
-<script src="https://geoip-js.com/js/apis/geoip2/v2.1/geoip2.js" type="text/javascript"></script>
+<!-- script src="https://geoip-js.com/js/apis/geoip2/v2.1/geoip2.js" type="text/javascript"></script -->
+
 <script>
 function getGeoLocation() {
     return new Promise((resolve, reject) => {
