--- a/showcase/powered-by-fiware/index.html
+++ b/showcase/powered-by-fiware/index.html
@@ -904,30 +904,74 @@ document.addEventListener("DOMContentLoaded", () => {
 
 <!-- GeoIP -->
 <!-- script src="https://geoip-js.com/js/apis/geoip2/v2.1/geoip2.js" type="text/javascript"></script -->
-
 <script>
-function getGeoLocation() {
-    return new Promise((resolve, reject) => {
-        geoip2.city(
-            function onSuccess(response) {
-                // If successful, extract location information
-                const location = {
-                    latitude: response.location.latitude,
-                    longitude: response.location.longitude,
-                };
-                resolve(location); // Resolve the promise with the location
-            },
-            function onError(error) {
-                reject(error); // Reject the promise if there is an error
-            }
-        );
-    });
+//function getGeoLocation() {
+//     return new Promise((resolve, reject) => {
+//         geoip2.city(
+//             function onSuccess(response) {
+//                 // If successful, extract location information
+//                 const location = {
+//                     latitude: response.location.latitude,
+//                     longitude: response.location.longitude,
+//                 };
+//                 resolve(location); // Resolve the promise with the location
+//             },
+//             function onError(error) {
+//                 reject(error); // Reject the promise if there is an error
+//             }
+//         );
+//     });
+// }
+async function getRandomCoordinates() {
+  return new Promise((resolve) => {
+    // Simulate an asynchronous operation with a timeout
+    setTimeout(() => {
+      // Define the bounding boxes for New York, Berlin, and Tokyo
+      const locations = {
+        newYork: {
+          latMin: 40.477399,
+          latMax: 40.917577,
+          lngMin: -74.25909,
+          lngMax: -73.700272,
+        },
+        berlin: {
+          latMin: 52.338261,
+          latMax: 52.675454,
+          lngMin: 13.088346,
+          lngMax: 13.761117,
+        },
+        tokyo: {
+          latMin: 35.528984,
+          latMax: 35.898524,
+          lngMin: 139.562914,
+          lngMax: 139.927754,
+        },
+      };
+
+      // Randomly select one of the cities
+      const cities = Object.keys(locations);
+      const selectedCity = cities[Math.floor(Math.random() * cities.length)];
+      const bounds = locations[selectedCity];
+
+      // Generate random latitude and longitude within the selected city's bounding box
+      const randomLat = Math.random() * (bounds.latMax - bounds.latMin) + bounds.latMin;
+      const randomLng = Math.random() * (bounds.lngMax - bounds.lngMin) + bounds.lngMin;
+
+      const location = {
+                    latitude: randomLat,
+                    longitude: randomLng,
+                        };
+      // Resolve the promise with the result
+      resolve(locaiton);
+    }, 500); // Simulated delay (500ms)
+  });
 }
 
 // Example usage with async/await
 async function fetchLocation() {
     try {
-        window.geoLocation = await getGeoLocation();
+        //window.geoLocation = await getGeoLocation();
+        window.geoLocation = await getRandomCoordinates();
         // Do something with the location here (e.g., display it on the UI)
     } catch (error) {
         window.geoLocation = {
